# BVM

./: CMakeLists.txt  README.md  \
include/: heap_area.hpp
include/bolt_virtual_machine/: emitter.h  instruction.hpp  vm.hpp
include/lisp/: ast.hpp  codegen.hpp  disassembler.hpp  lexer.hpp  parser.hpp  semantics.hpp
src/: CMakeLists.txt  emitter.cpp  main.cpp  vm.cpp
src/lisp/: ast.cpp  bnf.txt  codegen.cpp  disassembler.cpp  lexer.cpp  parser.cpp  semantics.cpp
tests/: CMakeLists.txt  test_instructions.cpp  test_lisp_lexer.cpp  test_lisp_parser.cpp  test_lisp_semantics.cpp
